tests/snapshots/scenarios__061_tree_scope_tree_hops_limit_section_expansion.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "061_tree_scope_tree_hops_limit_section_expansion",
  "category": "tree_scope_filters",
  "status": "validated",
  "files": []
}
