tests/snapshots/scenarios__062_tree_scope_tree_level_and_min_words.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 062_tree_scope_tree_level_and_min_words [tree_scope_filters]: tree level and min words"
expression: result
info:
  id: 062_tree_scope_tree_level_and_min_words
  name: tree level and min words
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/062_tree_scope_tree_level_and_min_words/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "062_tree_scope_tree_level_and_min_words",
  "status": "validated"
}
